@@ -1,6 +1,14 @@
 1.3.1
 
+Crash Bandicoot
+- New feature: Enable Unused Enemies
+- New feature: Randomize Level Order
 
+Crash Bandicoot 2: Cortex Strikes Back
+- Randomize World Textures: Fixed not being able to build using this feature
+
+Crash Bandicoot: WARPED
+- Randomize World Textures: Fixed not being able to build using this feature
 
 1.3.0
 
